force-app/main/default/objects/Application__c/fields/Academic_History_Section__c.field-meta.xml
<CustomField>
    <fullName>Academic_History_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic History Section</label>
    <type>Checkbox</type>
</CustomField>