force-app/main/default/objects/Application__c/fields/Accompanying_Family_to_U_S__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_Family_to_U_S__c</fullName>
    <label>Accompanying Family to U S</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>