force-app/main/default/objects/Application__c/fields/Active_Duty__c.field-meta.xml
<CustomField>
    <fullName>Active_Duty__c</fullName>
    <label>Active Duty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>