force-app/main/default/objects/Application__c/fields/Admissions_Status__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Status__c</fullName>
    <label>Admissions Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Started App</fullName>
            </value>
            <value>
                <fullName>Submitted App</fullName>
            </value>
            <value>
                <fullName>Complete App</fullName>
            </value>
            <value>
                <fullName>Admit</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>File Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>