force-app/main/default/objects/Application__c/fields/AF_Reserves_of_National_Guard__c.field-meta.xml
<CustomField>
    <fullName>AF_Reserves_of_National_Guard__c</fullName>
    <label>AF Reserves of National Guard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>