force-app/main/default/objects/Application__c/fields/App_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Type__c</fullName>
    <label>App Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Student: I have a high school diploma or equivalent like the GED and want to attend College for the first time.</fullName>
            </value>
            <value>
                <fullName>International Student: I'm a student from outside the United States.</fullName>
            </value>
            <value>
                <fullName>Returning Student: I'm a previous Pima student wanting to take classes.</fullName>
            </value>
            <value>
                <fullName>High School Student: I'm currently a high school student wanting to take college courses for both high school and college credit (Dual Enrollment) or college credit only (Early Admission).</fullName>
            </value>
            <value>
                <fullName>Transfer Student: I'm transferring to Pima from another college or university and have never applied to Pima before.</fullName>
            </value>
            <value>
                <fullName>Guest Student: I'm a student at another college or university and would just like to take a few other classes at Pima.</fullName>
            </value>
            <value>
                <fullName>Adult Basic Education Student: I want to prepare for a High School Equivalency (HSE) exam like the GED, learn/improve my English, improve my basic skills in reading, writing or math, or learn about citizenship.</fullName>
            </value>
            <value>
                <fullName>Community/Personal Development Student: I'm interested in noncredit courses or workshops for personal interest.</fullName>
            </value>
            <value>
                <fullName>Workforce/Professional Student: I'm interested in workforce/skills training, Continuing Education Units (CEU) or taking classes arranged through my employer.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>