force-app/main/default/objects/Application__c/fields/Arizona_Tax_Filer__c.field-meta.xml
<CustomField>
    <fullName>Arizona_Tax_Filer__c</fullName>
    <label>Arizona Tax Filer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>