force-app/main/default/objects/Application__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concentration</label>
    <referenceTo>Concentration__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>