force-app/main/default/objects/Application__c/fields/Contact_Info_Section__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Info Section</label>
    <type>Checkbox</type>
</CustomField>