force-app/main/default/objects/Application__c/fields/Current_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Status__c</fullName>
    <label>Current Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Employed Part-time (20 or fewer hours a week)</fullName>
            </value>
            <value>
                <fullName>Unemployed &amp; Seeking Employment</fullName>
            </value>
            <value>
                <fullName>Unemployed &amp; Not Seeking Employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>