force-app/main/default/objects/Application__c/fields/Disability_Resources_Section__c.field-meta.xml
<CustomField>
    <fullName>Disability_Resources_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disability Resources Section</label>
    <type>Checkbox</type>
</CustomField>