force-app/main/default/objects/Application__c/fields/Do_You_Plan_To_Apply_For_Financial_Aid__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Plan_To_Apply_For_Financial_Aid__c</fullName>
    <label>Do You Plan To Apply For Financial Aid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I don't know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>