force-app/main/default/objects/Application__c/fields/Doc_Show_Arizona_Perm__c.field-meta.xml
<CustomField>
    <fullName>Doc_Show_Arizona_Perm__c</fullName>
    <label>Doc Show Arizona Perm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>