force-app/main/default/objects/Application__c/fields/Driver_License_State_ID_Issue_Date_P_G__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_State_ID_Issue_Date_P_G__c</fullName>
    <label>Driver License State ID Issue Date P G</label>
    <type>Date</type>
</CustomField>