force-app/main/default/objects/Application__c/fields/Driver_License_State_ID_Number_P_G__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_State_ID_Number_P_G__c</fullName>
    <label>Driver License State ID Number P G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>