force-app/main/default/objects/Application__c/fields/Driver_LicenseState_ID_Issue_Date_Self__c.field-meta.xml
<CustomField>
    <fullName>Driver_LicenseState_ID_Issue_Date_Self__c</fullName>
    <label>Driver LicenseState ID Issue Date Self</label>
    <type>Date</type>
</CustomField>