force-app/main/default/objects/Application__c/fields/Employer_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Employer_Transfer__c</fullName>
    <label>Employer Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>