force-app/main/default/objects/Application__c/fields/Enrollment_Questions_Section__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Questions_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Questions Section</label>
    <type>Checkbox</type>
</CustomField>