force-app/main/default/objects/Application__c/fields/Family_Status_Section__c.field-meta.xml
<CustomField>
    <fullName>Family_Status_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Status Section</label>
    <type>Checkbox</type>
</CustomField>