force-app/main/default/objects/Application__c/fields/Financial_Aid_Section__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Aid Section</label>
    <type>Checkbox</type>
</CustomField>