force-app/main/default/objects/Application__c/fields/Home_Computer_Access__c.field-meta.xml
<CustomField>
    <fullName>Home_Computer_Access__c</fullName>
    <label>Home Computer Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>