force-app/main/default/objects/Application__c/fields/Honorably_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Honorably_Discharged__c</fullName>
    <label>Honorably Discharged</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>