force-app/main/default/objects/Application__c/fields/I_20_Form_Release_Method__c.field-meta.xml
<CustomField>
    <fullName>I_20_Form_Release_Method__c</fullName>
    <label>I 20 Form Release Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail to my Primary (Permanent/Home) Address</fullName>
            </value>
            <value>
                <fullName>Mail to my Secondary (Local/Mailing) Address</fullName>
            </value>
            <value>
                <fullName>In-person Pick-up (You will be emailed when it is available)</fullName>
            </value>
            <value>
                <fullName>Mail to my Third Party Representative (A Release Form with be required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>