force-app/main/default/objects/Application__c/fields/Indicate_Provided_License_ID__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Provided_License_ID__c</fullName>
    <label>Indicate Provided License ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>