force-app/main/default/objects/Application__c/fields/Indicate_Provided_Voter_Registration__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Provided_Voter_Registration__c</fullName>
    <label>Indicate Provided Voter Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>