force-app/main/default/objects/Application__c/fields/Info_about_ADR__c.field-meta.xml
<CustomField>
    <fullName>Info_about_ADR__c</fullName>
    <label>Info about ADR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>