force-app/main/default/objects/Application__c/fields/International_Agent_Aided_Application__c.field-meta.xml
<CustomField>
    <fullName>International_Agent_Aided_Application__c</fullName>
    <label>International Agent Aided Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don't Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>