force-app/main/default/objects/Application__c/fields/International_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>International_Agent_Name__c</fullName>
    <label>International Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>