force-app/main/default/objects/Application__c/fields/International_Section__c.field-meta.xml
<CustomField>
    <fullName>International_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Section</label>
    <type>Checkbox</type>
</CustomField>