force-app/main/default/objects/Application__c/fields/Legal_Ties_w_Arizona__c.field-meta.xml
<CustomField>
    <fullName>Legal_Ties_w_Arizona__c</fullName>
    <label>Legal Ties w Arizona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arizona Driver's License or State ID</fullName>
            </value>
            <value>
                <fullName>State of Arizona Tax Forms (For yourself, or listing you as a dependent/spouse) showing 12 months of residence</fullName>
            </value>
            <value>
                <fullName>Arizona Voter Registration Card</fullName>
            </value>
            <value>
                <fullName>Arizona Vehicle Registration Form</fullName>
            </value>
            <value>
                <fullName>Arizona Lease agreement</fullName>
            </value>
            <value>
                <fullName>Arizona High School Transcripts, if graduated within the last year</fullName>
            </value>
            <value>
                <fullName>Arizona Employment Verification</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>