force-app/main/default/objects/Application__c/fields/Length_of_Study_at_PIMA__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Study_at_PIMA__c</fullName>
    <label>Length of Study at PIMA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 week</fullName>
            </value>
            <value>
                <fullName>One to four weeks</fullName>
            </value>
            <value>
                <fullName>Four to eight weeks</fullName>
            </value>
            <value>
                <fullName>More than eight weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>