force-app/main/default/objects/Application__c/fields/Lived_in_Arizona__c.field-meta.xml
<CustomField>
    <fullName>Lived_in_Arizona__c</fullName>
    <label>Lived in Arizona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>