force-app/main/default/objects/Application__c/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>