force-app/main/default/objects/Application__c/fields/Parent_Bachelor_s_or_Higher__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bachelor_s_or_Higher__c</fullName>
    <label>Parent Bachelor s or Higher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don't Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>