force-app/main/default/objects/Application__c/fields/Personal_Data_Section__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Data Section</label>
    <type>Checkbox</type>
</CustomField>