force-app/main/default/objects/Application__c/fields/Program_Offered__c.field-meta.xml
<CustomField>
    <fullName>Program_Offered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Offered</label>
    <referenceTo>Program_Offered__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>