force-app/main/default/objects/Application__c/fields/Refugee_Status_in_AZ__c.field-meta.xml
<CustomField>
    <fullName>Refugee_Status_in_AZ__c</fullName>
    <label>Refugee Status in AZ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>