force-app/main/default/objects/Application__c/fields/Residency_Status_Section__c.field-meta.xml
<CustomField>
    <fullName>Residency_Status_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency Status Section</label>
    <type>Checkbox</type>
</CustomField>