force-app/main/default/objects/Application__c/fields/Single_Parent__c.field-meta.xml
<CustomField>
    <fullName>Single_Parent__c</fullName>
    <label>Single Parent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>